[package]
name = "fiverrbackend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
tokio = { version = "1.42.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["compression", "auth"] }
hyper = "1.5.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "postgres"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.0"
argon2 = "0.5.3"
solana-client = "2.1.7"
solana-sdk = "2.1.7"
anyhow = "1.0.95"
thiserror = "2.0.9"
time = "0.3.37"
uuid = { version = "1.11.0", features = ["v4"] }
tokio-util = "0.7.13"

[dev-dependencies]
cargo-watch = "8.5.3"
proptest = "1.6.0"
tokio-test = "0.4.4"
reqwest = { version = "0.12.12", features = ["json"] }
